--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,6 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
-
-
-
-
-
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -23,50 +18,22 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-//            shrinkResources true
-//            zipAlignEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-
     }
-    sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
 }
 
 repositories {
     jcenter()
     mavenCentral()
     maven {
-        url "https://jitpack.io"
-
-
-
-    }
-    maven {
-        url 'https://oss.jfrog.org/artifactory/oss-snapshot-local'
-
-    }
-
-
+        url "https://jitpack.io" }
 }
 
-//ext {
-//    latest_snapshot = '3.7.0.2901-SNAPSHOT'
-//}
-def paging_version = "1.0.1"
-def retrofit_version = "2.3.0"
-def room_version = "1.1.1"
-def support_version = "27.1.1"
-
-
 dependencies {
-    implementation 'com.github.Bleoo:WindowImageView:1.0.2'
-    implementation 'com.cleveroad:cycle-menu:1.0.2'
-    implementation "com.squareup.retrofit2:converter-moshi:2.4.0"
-    implementation 'com.linroid.filtermenu:library:0.2.+@aar'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
-    implementation 'com.getkeepsafe.taptargetview:taptargetview:1.11.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     //noinspection GradleCompatible
@@ -77,21 +44,13 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.1.0'
     testImplementation 'junit:junit:4.12'
     implementation 'com.bartoszlipinski:viewpropertyobjectanimator:1.4.5'
-    androidTestImplementation 'androidx.test:runner:1.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
-    implementation 'com.airbnb.android:lottie:2.5.0'
     implementation 'com.nshmura:recyclertablayout:1.5.0'
-
     implementation 'com.github.danylovolokh:list-visibility-utils:0.2.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.palette:palette:1.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
-    testImplementation 'junit:junit:4.12'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     androidTestImplementation 'androidx.test:runner:1.1.0'
@@ -100,17 +59,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.6'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1'
     implementation 'androidx.paging:paging-runtime:2.0.0'
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
     implementation 'androidx.room:room-runtime:2.0.0'
     implementation 'com.google.firebase:firebase-database:16.0.5'
     implementation 'com.google.firebase:firebase-storage:16.0.5'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.21"
-
-    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-experimental-adapter:1.0.0'
-
-
     implementation "com.google.android.exoplayer:exoplayer:2.8.1"
     implementation "im.ene.toro3:toro:3.6.2.2804"
     implementation "im.ene.toro3:toro-ext-exoplayer:3.6.2.2804"
