--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ allprojects {
         google()
         jcenter()
         maven {
+            // jetpack
             url "https://maven.google.com"
         }
 
