--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,11 +40,15 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.facebook.shimmer:shimmer:0.4.0'
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
     implementation 'com.google.firebase:firebase-auth:16.1.0'
     testImplementation 'junit:junit:4.12'
     implementation 'com.bartoszlipinski:viewpropertyobjectanimator:1.4.5'
     implementation 'com.nshmura:recyclertablayout:1.5.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.github.danylovolokh:list-visibility-utils:0.2.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.0'
